fixed bulma nav overflow styling

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -107,3 +107,10 @@ a.nav-item.is-danger.is-active
 
 .flex-grow
   flex-grow: 1
+
+.no-overflow
+  overflow: scroll
+
+#barchart
+  max-height: 150px
+  overflow: scroll
